# eth-erc20

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CONTRIBUTING.md  Dockerfile  GiftableToken.abi.json  GiftableToken.sol  LICENSE  README.md  deploy.py
python/: .coverage  CHANGELOG  MANIFEST.in  README.test  requirements.txt  run_tests.sh  setup.cfg  setup.py
python/eth_erc20/: erc20.py
python/eth_erc20/runnable/: approve.py  balance.py  decode.py  info.py  transfer.py  util.py
python/giftable_erc20_token/: __init__.py  _clf.py  factory.py
python/giftable_erc20_token/data/: GiftableToken.json  GiftableToken.metadata.json  StaticToken.json  StaticToken.metadata.json
python/giftable_erc20_token/runnable/: add.py  deploy.py  gift.py  minter.py
python/static_token/: factory.py
python/static_token/unittest/: __init__.py  base.py
python/tests/: conftest.py  test_erc20.py  test_erc20_interface.py
solidity/: GiftableToken.sol  Makefile  StaticToken.sol
