[metadata]
name = giftable-erc20-token
version = 0.0.7b8
description = Simple ERC20 contract with deployment script that lets any address mint and gift itself tokens.
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/nolash/giftable-erc-token
keywords =
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
	#Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE

[options]
include_package_data = True
python_requires = >= 3.6
packages =
	giftable_erc20_token
	giftable_erc20_token.runnable
install_requires =
	web3==5.12.2
	crypto-dev-signer~=0.4.13rc2

[options.package_data]
* =
 	data/GiftableToken.json
 	data/GiftableToken.bin

[options.entry_points]
console_scripts =
	giftable-token-deploy = giftable_erc20_token.runnable.deploy:main
	giftable-token-gift = giftable_erc20_token.runnable.gift:main
